--- a/testsite/templates/elver/apk.html
+++ b/testsite/templates/elver/apk.html
@@ -112,14 +112,14 @@
                             <td>2021/10/10 12:00</td>
                             <td class="text-end">
                                 <div class="btn-list flex-nowrap">
-                                    <a id="apk_info" data-bs-toggle="modal" data-bs-target="#modal-simple" class="btn btn-white w-100">
+                                    <a id="apk_info" data-bs-toggle="modal" data-bs-target="#modal-apkinfo" class="btn btn-white w-100">
                                         <svg t="1635393779577" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="12868" width="200" height="200"><path d="M886.003 853.389c-19.66 0-806.73 0.612-821.669 0.612V202.679c0-17.712 15.006-32.071 33.516-32.071h784.818l3.335 682.781z" fill="#3A5CAC" p-id="12869"></path><path d="M205.947 275.289s574.745 0.908 626.261 0.908c0 0 0.583 40.118 0.583 65.828L551.81 393.517c-28.864 4.017-78.632 17.096-128.344 17.096H205.947V275.289z" fill="#F8F8F8" p-id="12870"></path><path d="M960.077 820.119c0 18.484-15.111 33.601-33.595 33.601H151.114c0-3.083 0.579-420.338 0.579-420.338 0-18.48 15.115-33.516 33.601-33.516h267.708c31.872 0 53.149-19.713 73.85-38.853 9.854-9.118 30.312-28.095 39.345-29.736h393.882V820.12h-0.002z" fill="#F3797D" p-id="12871"></path><path d="M803.137 489.9H543.972c-15.111 0-27.355 12.239-27.355 27.355 0 15.195 12.243 27.435 27.355 27.435h259.166c15.036 0 27.274-12.239 27.274-27.435 0.001-15.117-12.239-27.355-27.275-27.355z m0 120.917H543.972c-15.111 0-27.355 12.239-27.355 27.355 0 15.111 12.243 27.351 27.355 27.351h259.166c15.036 0 27.274-12.239 27.274-27.351 0.001-15.117-12.239-27.355-27.275-27.355z" fill="#FFFFFF" p-id="12872"></path></svg>
                                         信息
                                     </a>
                                     <span class="dropdown">
                                         <button class="btn dropdown-toggle align-text-top" data-bs-boundary="viewport" data-bs-toggle="dropdown">更多</button>
                                         <div class="dropdown-menu dropdown-menu-end">
-                                            <a class="dropdown-item" href="#">
+                                            <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modal-qrcode">
                                                 <svg t="1635414954457" class="icon dropdown-item-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4949" width="200" height="200"><path d="M704 277.3c0-23.6 19.1-42.7 42.7-42.7s42.7 19.1 42.7 42.7-19.1 42.7-42.7 42.7-42.7-19.1-42.7-42.7zM277.3 704c23.6 0 42.7 19.1 42.7 42.7s-19.1 42.7-42.7 42.7-42.7-19.1-42.7-42.7 19.1-42.7 42.7-42.7z m277.4 192c0-23.6 19.1-42.7 42.7-42.7 12.2 0 42.7 0.9 42.7 0.9V896c0 23.6-19.1 42.7-42.7 42.7s-42.7-19.1-42.7-42.7zM896 640c-23.6 0-42.7-19.1-42.7-42.7s19.1-42.7 42.7-42.7 42.7 19.1 42.7 42.7S919.6 640 896 640z m-298.7-85.3c23.6 0 42.7 19.1 42.7 42.7V640h-42.7c-23.6 0-42.7-19.1-42.7-42.7s19.1-42.6 42.7-42.6zM896 725.3c23.6 0 42.7 19.1 42.7 42.7v128c0 5.9-1.2 11.5-3.4 16.6 0 0.1-0.2 0.2-0.2 0.3-2.1 5-5.2 9.5-8.9 13.3-1.4 1.4-3.4 2.1-4.9 3.4-2.8 2-5.4 4.4-8.6 5.8-5.1 2.2-10.7 3.4-16.6 3.4H768c-23.6 0-42.7-19.1-42.7-42.7v-42.7h128V768c0-23.6 19.1-42.7 42.7-42.7z m-170.7-42.6v170.7l-85.3 0.9V640h42.7c23.6 0 42.6 19.1 42.6 42.7zM234.7 277.3c0-23.6 19.1-42.7 42.7-42.7s42.7 19.1 42.7 42.7-19.2 42.7-42.8 42.7c-23.6 0-42.6-19.1-42.6-42.7z" fill="#00A2FF" p-id="4950"></path><path d="M213.3 554.7h128c70.7 0 128 57.3 128 128v128c0 70.7-57.3 128-128 128h-128c-70.7 0-128-57.3-128-128v-128c0-70.7 57.3-128 128-128z m0 85.3c-23.6 0-42.7 19.1-42.7 42.7v128c0 23.6 19.1 42.7 42.7 42.7h128c23.6 0 42.7-19.1 42.7-42.7v-128c0-23.6-19.1-42.7-42.7-42.7h-128zM682.7 85.3h128c70.7 0 128 57.3 128 128v128c0 70.7-57.3 128-128 128h-128c-70.7 0-128-57.3-128-128v-128c0-70.7 57.3-128 128-128z m0 85.4c-23.6 0-42.7 19.1-42.7 42.7v128c0 23.6 19.1 42.7 42.7 42.7h128c23.6 0 42.7-19.1 42.7-42.7v-128c0-23.6-19.1-42.7-42.7-42.7h-128zM213.3 85.3h128c70.7 0 128 57.3 128 128v128c0 70.7-57.3 128-128 128h-128c-70.7 0-128-57.3-128-128v-128c0-70.7 57.3-128 128-128z m0 85.4c-23.6 0-42.7 19.1-42.7 42.7v128c0 23.6 19.1 42.7 42.7 42.7h128c23.6 0 42.7-19.1 42.7-42.7v-128c0-23.6-19.1-42.7-42.7-42.7h-128z" fill="#666666" p-id="4951"></path></svg>
                                                 扫码下载
                                             </a>
@@ -299,7 +299,7 @@
     </div>
 </div>
 
-<div class="modal modal-blur fade" id="modal-simple" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal modal-blur fade" id="modal-apkinfo" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -315,11 +315,29 @@
         </div>
     </div>
 </div>
+
+<div class="modal modal-blur fade" id="modal-qrcode" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">扫码下载</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" style="margin:0 auto;">
+                <div id="qrcode"></div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 
 
 {% block script %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 <script>
 
     $('#apk_tab').addClass('active');
@@ -341,5 +359,15 @@
             }
         });
     });
+</script>
+<script>
+var qrcode = new QRCode(document.getElementById("qrcode"), {
+	text: "https://github.com/",
+	width: 280,
+	height: 280,
+	colorDark : "#383838",
+	colorLight : "#ffffff",
+	correctLevel : QRCode.CorrectLevel.H
+});
 </script>
 {% endblock %}
