--- a/testsite/templates/elver/apk.html
+++ b/testsite/templates/elver/apk.html
@@ -83,12 +83,11 @@
                         </div>
                       </div>
                     </div>
-                <table class="table card-table table-vcenter text-nowrap datatable" style="text-align: center">
+                <table class="table card-table table-vcenter  datatable" style="text-align: center">
                       <thead>
                       <tr>
                           <th class="w-1"><input class="form-check-input m-0 align-middle" type="checkbox" aria-label="Select all invoices"></th>
-                          <th class="w-1">No.
-                          </th>
+                          <th class="w-1">No.</th>
                           <th>项目</th>
                           <th>名称</th>
                           <th>环境</th>
@@ -99,7 +98,7 @@
                           <th style="width: 10%"></th>
                       </tr>
                       </thead>
-                      <tbody>
+                      <tbody >
                         <tr>
                             <td><input class="form-check-input m-0 align-middle" type="checkbox" aria-label="Select invoice"></td>
                             <td><span class="text-muted">10000000</span></td>
