--- a/testsite/templates/elver/server.html
+++ b/testsite/templates/elver/server.html
@@ -35,7 +35,7 @@
                                     <option>项目Aaaaaa</option>
                                 </select>
                             </div>
-                            <div class="input-group ml_15" style="width: 25%">
+                            <div class="input-group" style="width: 25%">
                                 <div class="input-group-text">接口</div>
                                 <select class="select2-selection--single" data-placeholder="Choose one thing"  >
                                     <option>全部</option>
@@ -101,7 +101,7 @@
                                     <option>项目B</option>
                                 </select>
                             </div>
-                            <div class="input-group ml_15" style="width: 15%">
+                            <div class="input-group" style="width: 15%">
                                 <div class="input-group-text">等级</div>
                                 <select class="select2-selection--single" data-placeholder="Choose one thing" >
                                     <option>全部</option>
@@ -109,7 +109,7 @@
                                     <option>WORNING</option>
                                 </select>
                             </div>
-                            <div class="input-group ml_15" style="width: 25%">
+                            <div class="input-group" style="width: 25%">
                                 <div class="input-group-text">接口</div>
                                 <select class="select2-selection--single" data-placeholder="Choose one thing"  >
                                     <option>全部</option>
@@ -117,11 +117,11 @@
                                     <option>user/update_user_info</option>
                                 </select>
                             </div>
-                            <div class="input-group ml_15" style="width: 20%">
+                            <div class="input-group" style="width: 20%">
                                 <div class="input-group-text">起始日期</div>
                                  <input type="date" class="form-control">
                             </div>
-                            <div class="input-group ml_15" style="width: 20%">
+                            <div class="input-group" style="width: 20%">
                                 <div class="input-group-text">最后日期</div>
                                  <input type="date" class="form-control">
                             </div>
@@ -238,13 +238,13 @@
       		},
       		series: [{
       			name: "403",
-      			data: [13281, 8521, 15038, 9983, 15417, 8888, 7052, 14270, 5214, 9587, 5950, 16852, 17836, 12217, 17406, 12262, 9147, 14961, 18292, 15230, 13435, 10649, 5140, 13680, 4508, 13271, 13413, 5543, 18727, 18238, 18175, 6246, 5864, 17847, 9170, 6445, 12945, 8142, 8980, 10422, 15535, 11569, 10114, 17621, 16138, 13046, 6652, 9906, 14100, 16495, 6749]
+      			data: [13281, 8521, 15038, 9983, 15417, 8888, 7052, 14270, 5214, 9587, 5950, 16852, 17836, 12217, 17406, 12262, 9147, 14961, 18292, 15230, 13435, 10649, 5140, 13680,9000]
       		},{
       			name: "502",
-      			data: [3680, 1862, 3070, 2252, 5348, 3091, 3000, 3984, 5176, 5325, 2420, 5474, 3098, 1893, 3748, 2879, 4197, 5186, 4213, 4334, 2807, 1594, 4863, 2030, 3752, 4856, 5341, 3954, 3461, 3097, 3404, 4949, 2283, 3227, 3630, 2360, 3477, 4675, 1901, 2252, 3347, 2954, 5029, 2079, 2830, 3292, 4578, 3401, 4104, 3749, 4457, 3734]
+      			data: [3680, 1862, 3070, 2252, 5348, 3091, 3000, 3984, 5176, 5325, 2420, 5474, 3098, 1893, 3748, 2879, 4197, 5186, 4213, 4334, 2807, 1594, 4863, 2030, 3752]
       		},{
       			name: "503",
-      			data: [722, 1866, 961, 1108, 1110, 561, 1753, 1815, 1985, 776, 859, 547, 1488, 766, 702, 621, 1599, 1372, 1620, 963, 759, 764, 739, 789, 1696, 1454, 1842, 734, 551, 1689, 1924, 1875, 908, 1675, 1541, 1953, 534, 502, 1524, 1867, 719, 1472, 1608, 1025, 889, 1150, 654, 1695, 1662, 1285, 1787]
+      			data: [722, 1866, 961, 1108, 1110, 561, 1753, 1815, 1985, 776, 859, 547, 1488, 766, 702, 621, 1599, 1372, 1620, 963, 759, 764, 739, 789,800]
       		}],
       		grid: {
       			padding: {
@@ -267,7 +267,7 @@
       			tooltip: {
       				enabled: false
       			},
-      			type: 'datetime',
+      			type: 'time',
       		},
       		yaxis: {
       			labels: {
@@ -275,7 +275,9 @@
       			},
       		},
       		labels: [
-      			'2020-06-20', '2020-06-21', '2020-06-22', '2020-06-23', '2020-06-24', '2020-06-25', '2020-06-26', '2020-06-27', '2020-06-28', '2020-06-29', '2020-06-30', '2020-07-01', '2020-07-02', '2020-07-03', '2020-07-04', '2020-07-05', '2020-07-06', '2020-07-07', '2020-07-08', '2020-07-09', '2020-07-10', '2020-07-11', '2020-07-12', '2020-07-13', '2020-07-14', '2020-07-15', '2020-07-16', '2020-07-17', '2020-07-18', '2020-07-19', '2020-07-20', '2020-07-21', '2020-07-22', '2020-07-23', '2020-07-24', '2020-07-25', '2020-07-26', '2020-07-27', '2020-07-28', '2020-07-29', '2020-07-30', '2020-07-31', '2020-08-01', '2020-08-02', '2020-08-03', '2020-08-04', '2020-08-05', '2020-08-06', '2020-08-07', '2020-08-08', '2020-08-09'
+      			'00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00',
+                '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00',
+                '22:00', '23:00', '24:00'
       		],
       		colors: ["#3b5998", "#1da1f2", "#ea4c89"],
       		legend: {
