--- a/templates/base.html
+++ b/templates/base.html
@@ -107,12 +107,12 @@
                             </a>
                         </li>
                         <li class="nav-item" id="apk_tab">
-                            <a class="nav-link" href="/apk/" >
+                            <a class="nav-link" href="/apk/info" >
                                 <span class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/home -->
                                     <svg t="1635059906963" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="70642" width="200" height="200"><path d="M720.149333 0L981.333333 257.066667v665.813333A101.12 101.12 0 0 1 880.213333 1024H143.786667A101.12 101.12 0 0 1 42.666667 922.88V101.12A101.12 101.12 0 0 1 143.786667 0h576.362666zM299.008 502.336H246.826667L151.68 746.666667h52.309333l20.181334-55.509334h97.664l21.333333 55.509334h53.674667l-97.834667-244.330667z m203.157333 0h-79.146666V746.666667h49.322666v-92.16h32.149334c33.493333 0 33.493333 0 51.178666-3.498667 13.013333-2.837333 13.013333-2.837333 25.6-11.584 12.565333-8.746667 12.565333-8.746667 20.736-24.106667 8.170667-15.317333 8.170667-15.317333 8.170667-37.824 0-29.162667 0-29.162667-14.186667-47.573333-14.165333-18.410667-14.165333-18.410667-35.157333-23.914667-12.757333-3.413333-12.757333-3.413333-52.8-3.648l-5.866667-0.021333z m198.506667 0H651.306667V746.666667h49.344v-73.813334l40-40.853333L807.829333 746.666667h63.829334l-97.002667-149.162667 92.010667-95.168h-66.346667l-99.648 108.501333v-108.501333z m-428.330667 57.002667l33.664 90.666666H239.338667l33.002666-90.666666z m223.829334-15.68c26.666667 0 26.666667 0 35.498666 1.664 11.989333 2.176 11.989333 2.176 19.84 10.837333 7.829333 8.682667 7.829333 8.682667 7.829334 22.016 0 10.816 0 10.816-5.589334 18.986667s-5.589333 8.170667-15.424 12.010666c-9.813333 3.84-9.813333 3.84-38.997333 3.84h-26.986667v-69.333333h23.829334z" fill="#4BB86A" p-id="70643"></path><path d="M776.277333 257.066667c-30.570667 0-55.381333-25.173333-55.381333-56.170667L720.96 0 981.333333 257.066667h-205.056z" fill="#94D9B9" p-id="70644"></path></svg>
                                 </span>
                                 <span class="nav-link-title">
-                                    APK INFO
+                                    APK
                                 </span>
                             </a>
                         </li>
@@ -297,7 +297,7 @@
 <!-- Libs JS -->
 <script src="/static/tabler/dist/libs/litepicker/dist/litepicker.js"></script>
 <script src="/static/tabler/dist/libs/choices.js/public/assets/scripts/choices.js"></script>
-<script src="/static/tabler/dist/libs/apexcharts/dist/apexcharts.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 <!-- Tabler Core -->
 <script src="/static/tabler/dist/js/tabler.min.js"></script>
 <!-- Select2-->
