timeline and builder优化 and 路由优化

--- a/testsite/templates/elver/sign-up.html
+++ b/testsite/templates/elver/sign-up.html
@@ -21,13 +21,13 @@
         </div>
         <form class="card card-md" action="." method="get">
           <div class="card-body">
-            <h2 class="card-title text-center mb-4">Create new account</h2>
+            <h2 class="card-title text-center mb-4">创建新的账号</h2>
             <div class="mb-3">
-              <label class="form-label">Account</label>
+              <label class="form-label">账号</label>
               <input id="new_account" type="text" class="form-control" placeholder="Enter account">
             </div>
             <div class="mb-3">
-              <label class="form-label">Password</label>
+              <label class="form-label">密码</label>
               <div class="input-group input-group-flat">
                 <input id="new_password" type="password" class="form-control"  placeholder="Password"  autocomplete="off">
                 <span class="input-group-text">
@@ -38,18 +38,14 @@
               </div>
             </div>
             <div class="mb-3">
-              <label class="form-check">
-                <input type="checkbox" class="form-check-input"/>
-                <span class="form-check-label">Agree the <a href="#" tabindex="-1">terms and policy</a>.</span>
-              </label>
             </div>
             <div class="form-footer">
-              <button id="create_account" type="button" class="btn btn-primary w-100">Create new account</button>
+              <button id="create_account" type="button" class="btn btn-primary w-100">开始创建</button>
             </div>
           </div>
         </form>
         <div class="text-center text-muted mt-3">
-          Already have account? <a href="/login/" tabindex="-1">Sign in</a>
+          已经拥有账号? <a href="/login/signin" tabindex="-1">立即登陆</a>
         </div>
       </div>
     </div>
