--- a/static/css/common.css
+++ b/static/css/common.css
@@ -5,6 +5,10 @@
     white-space: nowrap;
 }
 
+.log-text {
+    max-width: 500px;
+}
+
 .col_10{
     margin-right: 15px;
 }
@@ -19,5 +23,5 @@
 
 
 .ml_15{
-    margin-left: 15px;
+    margin-left: 10px;
 }
