--- a/testsite/templates/elver/builder-steps.html
+++ b/testsite/templates/elver/builder-steps.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}BUILDER-Job-Elver{% endblock %}
+{% block title %}BUILDER-Job-History{% endblock %}
 {% block page-title %}
-<a class="active" href="/builder/">BUILDER</a>
+<a class="active" href="/builder/home">BUILDER</a>
 <svg t="1635085520789" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="165732" width="200" height="200"><path d="M360.704 280.746667l45.226667-45.226667 246.570666 246.528a42.666667 42.666667 0 0 1 0 60.330667l-246.528 246.570666-45.22666601-45.269333 231.42400001-231.466667-231.466667-231.424z" p-id="165733"></path></svg>
-<a class="active" href="/builder_detail/">Elver-debug</a>
+<a class="active" href="/builder/job/{{ jobname }}">{{ jobname }}</a>
 <svg t="1635085520789" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="165732" width="200" height="200"><path d="M360.704 280.746667l45.226667-45.226667 246.570666 246.528a42.666667 42.666667 0 0 1 0 60.330667l-246.528 246.570666-45.22666601-45.269333 231.42400001-231.466667-231.466667-231.424z" p-id="165733"></path></svg>
-History
+#{{ item }}
 {% endblock %}
 {% block style %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css">
