--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,8 @@
     <link href="/static/json-viewer/css/jquery.json-viewer.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/pure-css-loader/css/css.css">
     <link rel="stylesheet" href="/static/loading/css/loading.css">
+    <!-- Daterangepicker -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <!-- Elver CSS files -->
     <link href="/static/css/common.css" rel="stylesheet"/>
     {% block style %}{% endblock %}
@@ -200,6 +202,9 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <!-- JsonViewer-->
 <script src="/static/json-viewer/js/jquery.json-viewer.js"></script>
+<!-- Daterangepicker -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 <!-- loading -->
 <script src="/static/loading/js/loading.js"></script>
 <!-- Common-->
