--- a/testsite/templates/elver/builder-detail.html
+++ b/testsite/templates/elver/builder-detail.html
@@ -11,7 +11,7 @@
 <div class="page-body">
     <div class="container-xl">
         <div class="row">
-            <div class="col-lg-4" style="width: 20%">
+            <div class="col-lg-4" style="width: 25%">
                 <div class="dropdown-menu dropdown-menu-demo">
                     <a href="#" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modal-report"><!-- Download SVG icon from http://tabler-icons.io/i/activity -->
                         <svg t="1635218413861" class="icon dropdown-item-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="306797" width="200" height="200"><path d="M510.368 5.312c264 0 478.4 214.912 478.4 478.336 0 264-214.912 478.4-478.4 478.4C246.432 962.048 32.032 747.136 32.032 483.648 32.032 219.648 246.944 5.312 510.368 5.312z m0 94.336c-211.648 0-384 172.352-384 384 0 211.712 172.352 384 384 384 211.712 0 384-172.288 384-384 0-211.648-172.288-384-384-384zM412.192 231.104c18.048-3.2 36.032 1.088 50.752 12.032l248.704 181.12c6.016 4.352 10.88 9.216 14.72 15.232 10.368 14.72 14.72 32.704 12.032 50.752a68.224 68.224 0 0 1-27.264 44.672l-248.768 181.12a67.328 67.328 0 0 1-87.808-7.04 66.368 66.368 0 0 1-20.16-48v-362.24a68.224 68.224 0 0 1 57.792-67.648z m26.624 88v313.408l214.144-158.08-214.144-155.328z" fill="#54A0FF" p-id="306798"></path></svg>
@@ -80,8 +80,9 @@
                         </li>
                         <div class="dropdown-divider"></div>
                         <li class="nav-item">
-                            <div  class="nav-link"><a href="#">#1</a>
+                            <div  class="nav-link"><a href="#">#100000000</a>
                                 <span class="ms-auto">
+                                    2021/10/10 20:00
                                     <svg t="1635149671263" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="176981" width="200" height="200"><path d="M682.666667 345.429333L678.570667 341.333333a41.642667 41.642667 0 0 0-58.026667 0L512 449.194667 403.456 341.333333a41.642667 41.642667 0 0 0-58.026667 0L341.333333 345.429333a41.642667 41.642667 0 0 0 0 58.026667L449.194667 512 341.333333 620.544a41.642667 41.642667 0 0 0 0 58.026667l4.778667 4.778666a41.642667 41.642667 0 0 0 58.026667 0L512 574.805333 620.544 682.666667a41.642667 41.642667 0 0 0 58.026667 0l4.096-4.096a41.642667 41.642667 0 0 0 0-58.026667L574.805333 512 682.666667 403.456a41.642667 41.642667 0 0 0 0-58.026667z" fill="#FD5451" p-id="176982"></path><path d="M512 0A512 512 0 1 0 1024 512 512 512 0 0 0 512 0z m0 942.08a430.08 430.08 0 1 1 430.08-430.08 430.762667 430.762667 0 0 1-430.08 430.08z" fill="#FD5451" p-id="176983"></path></svg>
                                 </span>
                             </div>
@@ -89,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <div style="width: 80%">
+            <div style="width: 75%">
                 <div class="card">
                     <div class="card-header">
                         <h3 class="card-title">构建参数</h3>
