--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="/static/loading/css/loading.css">
     <!-- Daterangepicker -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+    <!-- spop -->
+    <link href="/static/spop/dist/spop.css" rel="stylesheet">
     <!-- Elver CSS files -->
     <link href="/static/css/common.css" rel="stylesheet"/>
     {% block style %}{% endblock %}
@@ -170,8 +172,8 @@
                 <div class="row text-center align-items-center flex-row-reverse">
                     <div class="col-lg-auto ms-lg-auto">
                         <ul class="list-inline list-inline-dots mb-0">
-                            <li class="list-inline-item"><a href="#" class="link-secondary">帮助文档</a></li>
-                            <li class="list-inline-item"><a href="#" target="_blank" class="link-secondary" rel="noopener">源码</a></li>
+                            <li class="list-inline-item"><a href="/doc/Introduction" class="link-secondary">帮助文档</a></li>
+                            <li class="list-inline-item"><a href="https://github.com/" target="_blank" class="link-secondary" rel="noopener">源码</a></li>
                         </ul>
                     </div>
                     <div class="col-12 col-lg-auto mt-3 mt-lg-0">
@@ -207,6 +209,8 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 <!-- loading -->
 <script src="/static/loading/js/loading.js"></script>
+<!-- spop -->
+<script src="/static/spop/dist/spop.js"></script>
 <!-- Common-->
 <script src="/static/js/common.js"></script>
 <!-- 模块切换高亮 -->
