--- a/testsite/templates/elver/sign-in.html
+++ b/testsite/templates/elver/sign-in.html
@@ -12,6 +12,8 @@
   <link href="/static/tabler//dist/css/tabler-payments.min.css" rel="stylesheet"/>
   <link href="/static/tabler//dist/css/tabler-vendors.min.css" rel="stylesheet"/>
   <link href="/static/tabler//dist/css/demo.min.css" rel="stylesheet"/>
+  <!-- spop -->
+  <link href="/static/spop/dist/spop.css" rel="stylesheet">
 </head>
 <body class="antialiased border-top-wide border-primary d-flex flex-column">
 <div class="page page-center">
@@ -72,6 +74,10 @@
 
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="/static/tabler//dist/js/tabler.min.js"></script>
+<!-- spop -->
+<script src="/static/spop/dist/spop.js"></script>
+<!-- Common-->
+<script src="/static/js/common.js"></script>
 <script src="/static/js/login.js"></script>
 </body>
 </html>
