--- a/templates/base.html
+++ b/templates/base.html
@@ -180,7 +180,7 @@
                         <ul class="list-inline list-inline-dots mb-0">
                             <li class="list-inline-item">
                                 Copyright &copy; 2021
-                                <a href="." class="link-secondary">Rafa Chen</a>.
+                                <a class="link-secondary">Rafa Chen</a>.
                                 All rights reserved.
                             </li>
                         </ul>
