自动化测试-用例内容保存

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -23,5 +23,17 @@
 
 
 .ml_15{
+    margin-left: 15px;
+}
+
+.ml_10{
     margin-left: 10px;
+}
+
+.ml_25{
+    margin-left: 25px;
+}
+
+.ml_30{
+    margin-left: 30px;
 }
